--- a/Domination/honours-project-report/report.tex
+++ b/Domination/honours-project-report/report.tex
@@ -1229,6 +1229,8 @@ EXAMPLE
 
 Winners may get stuck in situations where they perform inconsistent actions because they are prevented by other players from reaching their goal.
 
+Winners make mistakes, in constrained play participant attacked wrong continent was then pushed out of both their mission continents and spent the rest of game trying to get back to them.
+
 \textbf{Why we get losers right}
 
 Losers 
